# BugAlgorithms

./: Alg1Deployment.ops  Bug1DeploymentIR.ops  Bug1DeploymentLaser.ops  Bug2DeploymentIR.ops  Bug2DeploymentLaser.ops  CMakeLists.txt  Manifest.xml
src/BugAlgorithms/: Alg1.cpp  Alg1.h  Alg2.cpp  Alg2.h  Bug1.cpp  Bug1.h  Bug2.cpp  Bug2.h  BugAlgorithm.h
src/DistanceSensor/: DistanceSensor.h  DistanceSensor.h~  IRAdapter.cpp  IRAdapter.h  LaserAdapter.cpp  LaserAdapter.h  TaskDistanceSensor.h
src/Localisation/: Localisation.h  OdometryAdapter.cpp  OdometryAdapter.h  TaskLocalisation.h
